[REFACTOR] Course/Section/Category 응답 객체 분리 및 계층 의존성 개선 (#83)
* refactor(course, section): Course/Section 응답 객체 분리 및 계층 의존성 개선

* refactor(category): Category 응답 객체 분리 및 계층 의존성 개선